# waybar-crypto-ticker

./: CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  config.example.toml
src/: config.rs  main.rs  ticker.rs  websocket.rs
